--- a/ToolShed/tadarida-pack/data-manager/tool-data/tadarida.loc.sample
+++ b/ToolShed/tadarida-pack/data-manager/tool-data/tadarida.loc.sample
@@ -1,1 +1,3 @@
-Test_final	Test_final_nom	/home/loup/Bureau/galaxy-17.01/tool-data/tadarida/Test_final
+#Use by tadarida_C data-manager for machine learning classifier use by tadarida_c tool.
+#See https://github.com/YvesBas/Tadarida-C for more information.
+#<unique_id>	<classifier_name>	<classifier_file_path>
