--- a/OpenRefine-galaxy-ie/Dockerfile
+++ b/OpenRefine-galaxy-ie/Dockerfile
@@ -1,7 +1,12 @@
 FROM ubuntu:16.10
+
+MAINTAINER Valentin Chambon "valentin.chambon@mnhn.fr"
+
+
 # These environment variables are passed from Galaxy to the container
 # and help you enable connectivity to Galaxy from within the container.
 # This means your user can import/export data from/to Galaxy.
+
 
 
 USER root
@@ -27,47 +32,38 @@ ENV PATH="/usr/lib/jvm/java-8-openjdk-amd64/bin:${PATH}"
 
 
 RUN apt-get install -y python-pip
-Run pip install --upgrade pip
+RUN pip install --upgrade pip
 RUN pip install -U setuptools
-RUn pip install bioblend galaxy-ie-helpers
+RUN pip install bioblend galaxy-ie-helpers
 
 #Vim to modify ass porky
 RUN apt-get install -y vim
 
-#PERSONAL NOTE: You have have to install ullib before openrefine to avoid proxy port problem.
 #Get urllib
 RUN wget -O - --no-check-certificate https://github.com/ValentinChCloud/urllib2_file/archive/master.tar.gz | tar -xz
 RUN mv urllib2_file-master urllib2_file; cd ./urllib2_file ; python setup.py test 
-
 RUN cd ./urllib2_file ; python setup.py build ; python setup.py install ;
 
 	
 
 
-# download and "mount" OpenRefine
+# Download and "mount" OpenRefine
 RUN wget -O - --no-check-certificate https://github.com/ValentinChCloud/OpenRefine/archive/master.tar.gz |tar -xz
 RUN mv OpenRefine-master OpenRefine
-RUN cd OpenRefine/ ;ls -al
 RUN apt-get install unzip
 
+RUN apt-get install -y curl
 
-# make some changes to Openrefine to export data to galaxy history, todo before openrefine build
-ADD ./ExportRowsCommand.java /OpenRefine/main/src/com/google/refine/commands/project/ExportRowsCommand.java
+# make some changes to Openrefine to export data to galaxy history
+ADD ./ExportRowsCommand.java OpenRefine/main/src/com/google/refine/commands/project/ExportRowsCommand.java
+ADD ./exporters.js OpenRefine/main/webapp/modules/core/scripts/project/exporters.js
+ADD ./langs/translation-default.json OpenRefine/main/webapp/modules/core/langs/translation-default.json
+ADD ./langs/translation-fr.json OpenRefine/main/webapp/modules/core/langs/translation-fr.json
+ADD ./langs/translation-fr.json OpenRefine/main/webapp/modules/core/langs/translation-en.json
+
+
 RUN /OpenRefine/refine build
 
-
-# Our very important scripts. Make sure you've run `chmod +x startup.sh
-# monitor_traffic.sh` outside of the container!
-ADD ./startup.sh /startup.sh
-ADD ./monitor_traffic.sh /monitor_traffic.sh
-#Import and export
-ADD ./openrefine_import.sh /openrefine_import.sh
-#Test
-
-# /import will be the universal mount-point for Jupyter
-# The Galaxy instance can copy in data that needs to be present to the
-# container
-RUN mkdir /import
 
 #Get python api openrefine
 RUN wget -O - --no-check-certificate https://github.com/ValentinChCloud/refine-python/archive/master.tar.gz | tar -xz
@@ -75,12 +71,28 @@ RUN mv refine-python-master refine-python
 
 
 
-#TEST
-RUN apt-get install -y curl
-ADD ./openrefine_create_project_API.py /refine-python/openrefine_create_project_API.py
 
-#Test export
+# Our very important scripts. Make sure you've run `chmod +x startup.sh
+# monitor_traffic.sh` outside of the container!
+ADD ./startup.sh /startup.sh
+ADD ./monitor_traffic.sh /monitor_traffic.sh
+# Create and export project
+ADD ./openrefine_create_project_API.py /refine-python/openrefine_create_project_API.py
 ADD ./openrefine_export_project.py /refine-python/openrefine_export_project.py
+
+
+
+
+
+
+# /import will be the universal mount-point for Jupyter
+# The Galaxy instance can copy in data that needs to be present to the
+# container
+RUN mkdir /import
+
+
+
+
 
 
 
@@ -91,9 +103,6 @@ COPY ./proxy.conf /proxy.conf
 
 VOLUME ["/import"]
 WORKDIR /import/
-
-
-
 
 
 
