--- a/OpenRefine-galaxy-ie/GIE/config/openrefine.ini
+++ b/OpenRefine-galaxy-ie/GIE/config/openrefine.ini
@@ -3,13 +3,13 @@
 
 [docker]
 # Command to execute docker. For example `sudo docker` or `docker-lxc`.
-command = docker {docker_args}
+#command = docker {docker_args}
 
 # The docker image name that should be started.
-image = valentinchdock/openrefine-galaxy-ie
+#image = valentinchdock/openrefine-galaxy-ie 
 
 # Additional arguments that are passed to the `docker run` command.
-#command_inject = --sig-proxy=true -e DEBUG=false
+#command_inject = -e REFINE_MEMORY=10G
 
 # URL to access the Galaxy API with from the spawn Docker container, if empty
 # this falls back to galaxy.ini's galaxy_infrastructure_url and finally to the
@@ -19,3 +19,9 @@ galaxy_url = :8080
 # The Docker hostname. It can be useful to run the Docker daemon on a different
 # host than Galaxy.
 #docker_hostname = localhost
+
+
+# If your Docker container exposes more then one port, Galaxy needs to know to
+# which ports it needs to connect. With this option you can specify the port number
+# inside your container to which Galaxy should connect the UI.
+#docker_connect_port = 3333
