gitignore file, finaly

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 tools/Rdata-reader/.Rhistory
+tools/gdal/.Rhistory
+tools/gdal/.Rhistory
+tools/gdal/gdal_retile.xml
+tools/gdal/test-data/info_ne
+tools/gdal/test-data/ne_10m_admin_0_countries.dbf
+tools/gdal/test-data/ne_10m_admin_0_countries.shp
+tools/gdal/test-data/ne_10m_admin_0_countries.shx
+tools/gdal/test-data/ne_10m_admin_1_states_provinces_shp.dbf
+tools/gdal/test-data/ogrinfo
+tools/gdal/test-data/ooo
+tools/gdal/test-data/tests_and_saves/
+tools/gdal/test-data/tool_test_output.html
+tools/gdal/test-data/tool_test_output.json
+tools/gdal/test-data/workshop_data/
+tools/gdal/tool_test_output.html
+tools/gdal/tool_test_output.json
+tools/gdal/workshop_gdal.pdf
+tools/regionalGAM/fichiers_exec_tuto/flight_curve_result.tabular
+tools/regionalGAM/scriptsR_Galaxy/tool_test_output.html
+tools/regionalGAM/scriptsR_Galaxy/tool_test_output.json
+
