Remove uninterested files

--- a/galaxy/config/galaxy.ini
+++ b/galaxy/config/galaxy.ini
@@ -243,7 +243,7 @@ conda_ensure_channels = iuc,bioconda,r,defaults,conda-forge,trent
 
 # File containing the Galaxy Tool Sheds that should be made available to
 # install from in the admin interface (.sample used if default does not exist).
-#tool_sheds_config_file = config/tool_sheds_conf.xml
+tool_sheds_config_file = config/tool_sheds_conf.xml
 
 # Set to True to enable monitoring of tools and tool directories
 # listed in any tool config file specified in tool_config_file option.
