--- a/GIE/Shiny_GIS/Dockerfile
+++ b/GIE/Shiny_GIS/Dockerfile
@@ -1,7 +1,7 @@
 FROM rocker/shiny:latest
 
 # Installing packages needed for check traffic on the container and kill if none
-echo "force-unsafe-io" > /etc/dpkg/dpkg.cfg.d/02apt-speedup && \
+RUN echo "force-unsafe-io" > /etc/dpkg/dpkg.cfg.d/02apt-speedup && \
     echo "Acquire::http {No-Cache=True;};" > /etc/apt/apt.conf.d/no-cache && \
     apt-get -qq update && apt-get install --no-install-recommends -y net-tools procps && \
     # Installing R package dedicated to the shniy app
