Missing packages on Dockerfile

--- a/GIE/Shiny_GIS/geoExploreR/Dockerfile
+++ b/GIE/Shiny_GIS/geoExploreR/Dockerfile
@@ -5,6 +5,16 @@ RUN apt-get update && apt-get install net-tools -y
 RUN apt-get install procps -y
 # Installing R package dedicated to the shniy app
 RUN Rscript -e "install.packages('leaflet')"
+RUN Rscript -e "install.packages('shinydashboard')"
+RUN Rscript -e "install.packages('shinyjs')"
+RUN Rscript -e "install.packages('ggvis')"
+RUN Rscript -e "install.packages('dplyr')"
+RUN Rscript -e "install.packages('RColorBrewer')"
+RUN Rscript -e "install.packages('raster')"
+RUN Rscript -e "install.packages('gstat')"
+RUN Rscript -e "install.packages('rgdal')"
+RUN Rscript -e "install.packages('Cairo')"
+
 
 # Bash script to check traffic
 RUN mkdir /srv/shiny-server/sample-apps/SIG
