Add Galaxy input data integration

--- a/GIE/Shiny_stat/radiant/Dockerfile
+++ b/GIE/Shiny_stat/radiant/Dockerfile
@@ -20,6 +20,7 @@ RUN echo "force-unsafe-io" > /etc/dpkg/dpkg.cfg.d/02apt-speedup && \
 
 COPY shiny-server.sh /usr/bin/shiny-server.sh
 COPY .Rprofile /home/shiny/.Rprofile
+COPY global.R /usr/local/lib/R/site-library/radiant.data/app/global.R
 ADD ./monitor_traffic.sh /monitor_traffic.sh
 COPY ./shiny-server.conf /etc/shiny-server/shiny-server.conf
 CMD ["/usr/bin/shiny-server.sh"]
