--- a/GIE/GIE_Biodiv/GIE_Shiny_sdmbench/Dockerfile
+++ b/GIE/GIE_Biodiv/GIE_Shiny_sdmbench/Dockerfile
@@ -5,7 +5,10 @@ RUN echo "force-unsafe-io" > /etc/dpkg/dpkg.cfg.d/02apt-speedup && \
     echo "Acquire::http {No-Cache=True;};" > /etc/apt/apt.conf.d/no-cache && \
     apt-get -qq update && apt-get install --no-install-recommends -y net-tools procps && \
     # Installing R package dedicated to the shniy app
+    Rscript -e "install.packages('devtools')" && \
+    Rscript -e "install.packages('keras')" && \
     Rscript -e "devtools::install_github("boyanangelov/sdmbench")" && \
+    #Rscript -e "remote::install_github("boyanangelov/sdmbench")" && \
     Rscript -e "keras::install_keras(tensorflow = "default")" && \
     Rscript -e "install.packages('maptools')" 
 
