use of @VERSION@

--- a/tools/Vigie-Chiro/.shed.yml
+++ b/tools/Vigie-Chiro/.shed.yml
@@ -1,5 +1,5 @@
 categories:
-- ZZ-test1 
+ - Ecology 
 description: Tools created by the vigiechiro team to analyses and identify chiro sounds files.
 
 long_description: |
