--- a/tools/gdal/.shed.yml
+++ b/tools/gdal/.shed.yml
@@ -1,35 +1,38 @@
 categories:
-    - Ecology 
+    - Ecology
 description: Geospatial Data Abstraction Library tools are all dedicated to manipulate raster and vector geospatial data formats.
 long_description: |
     Gdal is a translator library for raster and vector geospatial data formats that is released under an X/MIT style Open Source license by the Open Source Geospatial Foundation. As a library, it presents a single raster abstract data model and single vector abstract data model to the calling application for all supported formats. It also comes with a variety of useful command line utilities for data translation and processing.
 
-homepage_url: https://www.gdal.org/
+homepage_url: https://www.gdal.org
 name: gdal
-owner: mnhn65mo
-remote_repository_url: https://github.com/Alanamosse/Galaxy-E/tree/master/tools/gdal
+owner: ecology 
+remote_repository_url: https://github.com/galaxyecology/tools-ecology/tools/gdal
 type: unrestricted
 
 repositories:
-  gdaladdo:
+  gdal_gdaladdo:
     description: The gdaladdo utility can be used to build or rebuild overview images for most supported file formats with one of several downsampling algorithms.
+    owner: ecology
     include:
       - gdaladdo.xml
       - gdal_macros.xml
       - test-data/stere.tif
       - test-data/stere.tif.ovr
 
-  gdalbuildvrt:
+  gdal_gdalbuildvrt:
     description: This program builds a VRT (Virtual Dataset) that is a mosaic of the list of input GDAL datasets.
+    owner: ecology
     include:
       - gdalbuildvrt.xml
       - gdal_macros.xml
-      - test-data/east.dem
-      - test-data/west.dem
-      - test-data/dem.vrt
+      - test-data/small_east.dem
+      - test-data/small_west.dem
+      - test-data/small_dem.vrt
 
-  gdalinfo:
+  gdal_gdalinfo:
     description: The gdalinfo program lists various information about a GDAL supported raster dataset. 
+    owner: ecology
     include:
       - gdalinfo.xml
       - gdal_macros.xml
@@ -37,45 +40,53 @@ repositories:
       - test-data/stere_info.json
       - test-data/stere_advanced_info.txt
   
-  gdal_merge:
+  gdal_gdal_merge:
     description: This utility will automatically mosaic a set of images. All the images must be in the same coordinate system and have a matching number of bands, but they may be overlapping, and at different resolutions. In areas of overlap, the last image will be copied over earlier ones.
+    owner: ecology
     include:
       - gdal_merge.xml
       - gdal_macros.xml
-      - test-data/west.dem
-      - test-data/east.dem
-      - test-data/mergeddem.tif
+      - test-data/small_west.dem
+      - test-data/small_east.dem
+      - test-data/small_merged.tif
 
-  gdal_translate:
+  gdal_gdal_translate:
     description: The gdal_translate utility can be used to convert raster data between different formats, potentially performing some operations like subsettings, resampling, and rescaling pixels in the process.
+    owner: ecology
     include:
       - gdal_translate.xml
       - gdal_macros.xml
-      - test-data/stere.tif
-      - test-data/stere_advanced1.jpg
-      - test-data/stere_advanced2.png
-      - test-data/world.png
-      - test-data/geoworld.tif
+      - test-data/tinyworld.png
+      - test-data/tinyworld.tif
 
-  gdalwarp:
+  gdal_gdalwarp:
     description: The gdalwarp utility is an image mosaicing, reprojection and warping utility. The program can reproject to any supported projection, and can also apply GCPs stored with the image if the image is "raw" with control information.
+    owner: ecology
     include:
       - gdalwarp.xml
       - gdal_macros.xml
       - test-data/stere.tif 
       - test-data/stere_warp1.tiff 
-      - test-data/geoworld.tif 
-      - test-data/ortho1.tif 
-      - test-data/ortho2.tif 
-      - test-data/ortho3.tif 
-      - test-data/warpmerged.tif 
+      - test-data/tinyworld.tif 
+      - test-data/gdalwarp_test2_out.tif 
+      - test-data/gdalwarp_test3_out.tif 
+      - test-data/gdalwarp_test4_out.tif 
+      - test-data/small_warpmerged.tif 
 
-  ogrinfo:
-    description: The ogrinfo program lists various information about an OGR supported data source to stdout (the terminal).
+  gdal_ogrinfo:
+    description: The ogrinfo program lists various information about an OGR supported data source.
+    owner: ecology
     include:
       - ogrinfo.xml
       - gdal_macros.xml
-      - test-data/ogrinfo_test.nc
-      - test-data/ogrinfo_test1_out.txt
-      - test-data/ogrinfo_test2_out.txt
+      - test-data/custom.geo.json
+      - test-data/ogrinfo_test1_out2.txt
+
+  gdal_ogr2ogr:
+    description: The ogr2ogr program converts simple features data between file formats.
+    owner: ecology
+    include:
+      - ogr2ogr.xml
+      - gdal_macros.xml
+      - test-data/custom.geo.json
 
